More work on Dredd testing
